--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ android {
 
     dataBinding { enabled true } // Add this line to enable data binding feature.
 
-    viewBinding{enabled true}
+    viewBinding{enabled true} // Add this line to enable view binding feature.
+
 
     namespace 'com.yavuz.groovyapp'
     compileSdk 33
@@ -56,9 +57,13 @@ android {
 
 dependencies {
 
-    implementation 'ai.amani:Android.SDK.UI:1.0.0beta06'
+    def appcompat_version = "1.6.1"
 
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+// For loading and tinting drawables on older versions of the platform
+    implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
 
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
